assets/sass/main.scss
/* ... */
.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
    border-bottom-color: rgba(255, 255, 255, .25);
}

.nav-masthead .nav-link + .nav-link {
    margin-left: 1rem;
}

.nav-masthead .active {
    color: #fff;
    border-bottom-color: #fff;
}

@media (min-height: 1050px) {
    main {
        margin-top: -200px;
    }
}

body {
    .masthead-brand {
        float: left;
    }
    .nav-masthead {
        float: left;
        padding-top: 3px;
    }
}

@media (max-width: 28em) {
    body {
        .masthead-brand {
            float: none;
        }
        .nav-masthead {
            float: none;
            padding-left: 0;
        }
    }
}

@media (min-width: 830px) {
    #content {
        width: 800px;
    }
}
@media (min-width: 936px) {
    #body_home main {
        position: relative;
        left: -51px;
        padding-left: 0;
        margin-left: 0;
    }
}
@media (max-width: 799px) {
    #content {
        width: 100%;
    }
}


.cover {
    padding: 0 1.5rem;
}
.cover .btn-lg {
    padding: .75rem 1.25rem;
    font-weight: 700;
}

.mastfoot {
    color: rgba(255, 255, 255, .5);
}




html {
    overflow-y: scroll;
}

h2 {
    .os-icon {
        vertical-align: bottom;
    }
}

#content {
    a:not(.btn) {
        text-decoration: underline;
        text-shadow: 1px 1px 1px rgba(0, 0, 0, .5);
        color: #aaa;
    }
    a:hover:not(.btn), a:active:not(.btn) {
        text-decoration: none;
    }
}

body {
    .nav-masthead {
        padding-left: 2rem;
    }
    nav:not(.breadcrumbs) {
        margin-bottom: 20px;
        a {
            text-decoration: none;
        }
    }
}

.icon{
    width: 25px;
    height: 25px;
    use {
        width: 25px;
        height: 25px;
        fill: currentColor;
    }
}

.nb {
    white-space: nowrap;
}

[data-platform]:not([data-platform=generic]) {
    position: absolute;
    left: -9999px;
}

/*.downloads a.button {
    display: block;
    border: 1px solid #000033;
    background-color: #000066;
    background-color: #434377;
    color: #fff; height: 60px;
    float: left; margin: 1em;
    border-radius: 25px;
    padding: 10px;
    text-decoration: none;
    width: 250px;
    text-align: center;
}
.downloads .os-icon {
    float: left;
    width: 30px;
    height: 30px;
    margin: 15px 0.5em;
}
.downloads .filetype {
    display: block;
    float: right;
    background-image: url("http://rakudo.org/wp/wp-content/uploads/2016/02/file-icon.png");
    background-size: 50px;
    background-repeat: no-repeat;
    width: 40px;
    height: 50px;
    margin: 5px 0.5em;
}
.downloads .filetype .name {
    background-color: white;
    border: 1px solid black;
    color: black;
    padding: 1px;
    font-size: 12px;
    top: 20px;
    left: 10px;
    position: relative;
}
.downloads .rakudo {
    font-size: 12px;
}
.downloads .version {
    font-size: 20px;
    font-weight: bold;
}
.downloads .details {
    font-size: 12px;
}
.downloads {
    line-height: 1.3em;
}*/

.downloads-panel {
    img {
        margin-bottom: 5px;
    }
    .download span {
        display: block;
        line-height: 1.2em;
    }

    .version {
        font-weight: bold;
        font-size: 120%;
    }

    > [class*="col-"] {
        padding-bottom: 1rem;
    }
}

code,
pre, code {
    color: darken($color-body, 30%);
    text-shadow: 1px 1px 1px rgba(0, 0, 0, .5);
}

.jumbotron-wiry {
    background: none;
    border: 1px solid darken($color-body, 60%);
    padding-top: 2rem;
    padding-bottom: 1rem;
}
.breadcrumb {
    font-size: 80%;
    opacity: .4;
    transition: opacity 1s;
    padding-left: 0;
    background: none!important;
    clear: both;
}

.breadcrumb:hover {
    opacity: 1;
    transition: opacity .5s;
}

.accordion {
    padding-bottom: 1rem;
    .card-header {
        padding: 0;
    }
    .btn-link {
        text-decoration: none;
        padding: 1rem;
    }

    .card-header button:after {
        font-family: 'Icons';
        content: '\e09d';
        float: left;
        font-size: 80%;
        position: relative;
        top: 2px;
        color: #ffc107;
        margin-right: 10px;
    }
    .card-header button.collapsed:after {
        content: '\e0aa';
    }
}

.suck-b {
    margin-bottom: 0;
}
.kick-b {
    margin-bottom: 30px;
}

.kick-b-cols {
    > [class*="col-"] {
        padding-bottom: 2rem;
    }
}

.compiler-downloads-panel {
    padding-bottom: 1rem;

    > [class*="col-"]:first-child {
        padding-bottom: 0;
    }
    [class*="col-"] {
        padding-bottom: 1rem;
    }
}

.btn-secondary {
    transition-property: background, border-color, text-shadow color;
    transition-duration: .1s;
}
.btn-secondary:hover,
.btn-secondary:active, {
    background: #d3d3d3;
    color: #222;
    border-color: #bbb;
    text-shadow: .1px .1px .1px rgba(0, 0, 0, .4);
}

.tighten-line-height {
    line-height: 1em;
}

.alert-warning {
    padding: .5rem .5rem .5rem 2.5rem;
    position: relative;
    font-size: 80%;
    border-color: darken($color-warning, 25%)!important;
    transition: border-color 1s, text-shadow 1s;
    color: $color-warning;
}
.alert-warning:before {
    content: '\e0d8';
    font-family: 'Icons';
    font-style: normal;
    font-weight: normal;
    line-height: 1em;
    position: absolute;
    left: .9rem;
    top: 50%;
    font-size: 1rem;
    margin-top: -.6rem;
    color: $color-warning;
    opacity: .3;
    transition: opacity 1s;
}
.alert-warning:hover {
    text-shadow: 1px 1px 1px rgba(0, 0, 0, .9);
    border-color: darken($color-warning, 10%)!important;
}
.alert-warning:hover:before {
    opacity: 1;
}

.bg-none {
    background: none;
}

[class^="file-icon-"] {
    padding-left: 25px;
    min-height: 20px;
    display: inline-block;
    background: url(/asset/pics/file-icon-signature.png) no-repeat left;
    background-size: auto 20px;
}

[class^="file-icon-windows"] {
    background-image: url(/asset/pics/os-icon-windows.png)
}
/* ... */

